8241244: CDS dynamic dump asserts in ArchivePtrBitmapCleaner::do_bit

Reviewed-by: minqi, coleenp